# provider_runtime

./: .env.example  AGENTS.md  Cargo.toml  README.md
docs/: Stage1.md  Stage10.md  Stage11.md  Stage12.md  Stage13.md  Stage14.md  Stage14DeepResearch.md  Stage15.md  Stage16.md  Stage16_17_DeepResearch.md  Stage17.md  Stage18.md  Stage18_19_DeepResearch.md  Stage19.md  Stage2.md  Stage20.md  Stage21.md  Stage22.md  Stage23.md  Stage24.md  Stage25.md  Stage3.md  Stage4.md  Stage5.md  Stage6.md  Stage7.md  Stage8.md  Stage9.md  V0_Plan.md  V0_StepByStepPlan.md
scripts/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
scripts/data/anthropic/: text_multiturn.json  tool_use.json  tool_use_response.json
scripts/data/openai/: text_multiturn.json  tool_use.json  tool_use_reasoning.json
scripts/data/openrouter/: text_multiturn.json  tool_use.json  tool_use_reasoning.json
scripts/lib/: error_capture.ts  union_schema.ts  utils.ts
scripts/openrouter/: openrouter_smoke.sh  openrouter_tool_call_smoke.sh
scripts/providers/anthropic/: all_response_test.ts  (+3 more)
src/: lib.rs
src/catalog/: mod.rs  tests.rs
src/core/: types.rs
src/handoff/: mod.rs  tests.rs
src/pricing/: mod.rs  tests.rs
src/providers/: mod.rs  tests.rs  translator_contract.rs
src/registry/: mod.rs  tests.rs
src/runtime/: mod.rs  tests.rs
src/transport/: mod.rs  tests.rs
tests/: acceptance_multi_provider_run.rs  contract_anthropic.rs  contract_openai.rs  contract_openrouter.rs  core_exports_compile.rs  integration_runtime_mock_http.rs  live_runtime_smoke.rs  public_api_compiles.rs
(+363 files in other folders)
