[package]
name = "provider-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Provider-agnostic runtime adapters for LLM platforms"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"
indexmap = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
